# advanced_python_2025

./: README.md  pyproject.toml
cli/: nl.py  tail.py  wc.py
cli/artifacts/: nl_examples.txt  tail_examples.txt  wc_examples.txt
cli/test_files/: text_blank_lines.txt  text_long.txt  text_short.txt
latex/: Dockerfile  main.py  pyproject.toml
latex/artifacts/: PyPI_repo.txt  table.tex  table_image.tex
latex/latex_generator/: latex_generator.py
matrix/: matrix.py  matrix_mixins.py  pyproject.toml
matrix/artifacts/: A.txt  AB.txt  C.txt
scraper/: img_installer.py  scraper.py
scraper/artifacts/avito/: 20250410_2314.json  20250410_2315.json  20250410_2316.json
thread_vs_process/: fibonacci.py  integrate.py  rot13.py
thread_vs_process/artifacts/: 1.txt  2.txt  3.txt
