[project]
name = "advanced_python_2025"
version = "0.1.0"
description = "Homeworks for advanced python course at HSE. "
authors = [
    { name = "lilyreber" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"