[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix_operations"
version = "0.1.0"
description = "Matrix operations"
authors = [
    { name = "Liliia Imamutdinova", email = "lilyreber404@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.21.0",
]

